# spdlog_test_fork_lzy

./: .gitignore  CMakeLists.txt  CMakePresets.json
subproject1/: CMakeLists.txt
subproject1/src/: 1_basic_include.cpp
subproject2/: CMakeLists.txt
subproject2/src/: 2_console_logger.cpp
subproject3/: CMakeLists.txt
subproject3/src/: 3_fileslog.cpp
